--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "strictNullChecks": false,   // enable strict null checks as a best practice
     "module": "es6",            // specify module code generation
     "target": "es5",            // specify ECMAScript target version
-    "allowJs": true,             // allow a partial TypeScript and JavaScript codebase
+    "allowJs": false,             // allow a partial TypeScript and JavaScript codebase
     "esModuleInterop": true,
     "moduleResolution": "node"
   },
