--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "grandycalculator",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "dependencies": {},
   "devDependencies": {
     "ts-loader": "^8.0.2",
